editors/tree-sitter-bork/grammar.js
/// <reference types="tree-sitter-cli/dsl" />
const comma = rule => seq(rule, repeat(seq(',', rule)), optional(','));
const tuple = rule => seq('(', rule, ',', optional(comma(rule)), ')');
const items = (rule, $) => repeat(seq(rule, optional(choice(',', ';', $._newline))));
module.exports = grammar({
  name: 'bork',
  extras: $ => [/\s/, $.comment],
  word: $ => $.identifier,
  externals: $ => [$.go_content, $._newline, $._error_sentinel, $.bare_return, $.bare_break, $.bare_continue],
  conflicts: $ => [
    [$._expression, $.pattern],
    [$.list_literal, $.pattern],
    [$.tuple_type],
    [$.type, $._pattern_type],
    [$._pattern_type],
    [$._pattern_type, $._pattern_function_type],
    [$.tuple_type, $._pattern_function_type],
    [$.field_declaration],
    [$._identifier, $.go_type],
    [$._identifier, $.type_declaration],
    [$._identifier, $.argument],
    [$._identifier, $.mock_expression],
    [$._identifier, $.binding],
    [$._identifier, $.comptime_expression],
    [$._identifier, $.providers_declaration],
    [$._identifier, $.ambient_declaration],
    [$._identifier, $.with_expression],
    [$._identifier, $.scope_expression],
    [$._identifier, $.instances_declaration],
    [$._identifier, $.test_declaration],
    [$._identifier, $.instance_declaration],
    [$._identifier, $.class_declaration],
    [$._identifier, $.use_declaration],
    [$._identifier, $.import_declaration],
    [$.record_expression, $.map_literal],
    [$.generic_expression, $.call_expression, $.record_expression, $.binary_expression],
    [$.generic_expression, $.call_expression, $.record_expression, $.lambda_expression],
    [$.binding, $.record_expression],
    [$.trust_statement, $.record_expression],
    [$.generic_expression, $.call_expression, $.record_expression, $.unary_expression],
    [$.record_expression, $.list_literal],
    [$._statement, $.record_expression],
    [$.scope_expression, $.record_expression],
    [$.qualified_name, $.test_pattern],
    [$.tuple_type, $.test_tuple_pattern],
    [$.type, $.test_pattern],
    [$.type],
    [$.qualified_name, $.binding],
    [$.qualified_name, $.lambda_parameter],
    [$.qualified_name],
    [$._expression, $.scope_expression],
    [$.type_declaration],
    [$.use_declaration],
    [$.block, $.record_literal],
    [$.type, $._expression],
  ],
  rules: {
    source_file: $ => seq(optional($.shebang), repeat(choice($._declaration, $._statement, ';', $._newline))),
    shebang: _ => token(seq('#!', /[^\n]*/)),
    comment: _ => token(choice(seq('//', /[^\n]*/), seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'))),
    _identifier: $ => choice($.identifier, ...['is', 'import', 'use', 'class', 'instance', 'test', 'instances', 'scope', 'with', 'resource', 'private', 'derive', 'uses', 'nothing', 'in', 'ambient', 'logged', 'propagated', 'needs', 'providers', 'comptime', 'lazy', 'async', 'mock', 'go'].map(word => alias(word, $.identifier))),
    identifier: _ => /[\p{L}][\p{L}\p{N}_]*/u,
    _declaration: $ => prec.dynamic(10, choice($.import_declaration, $.use_declaration, $.type_declaration, $.function_declaration, $.predicate_declaration, $.rule_declaration, $.test_declaration, $.class_declaration, $.instance_declaration, $.instances_declaration, $.providers_declaration, $.ambient_declaration)),
    import_declaration: $ => prec.dynamic(10, seq('import', optional($._identifier), $.string)),
    use_declaration: $ => prec.dynamic(10, seq('use', $.qualified_name, optional(seq('.', '*')))),
    qualified_name: $ => prec.dynamic(1,  seq($._identifier, repeat(seq('.', $._identifier)))),
    type_declaration: $ => seq('type', field('name', $._identifier), optional($.type_parameters), '=', choice(seq(optional('private'), $.record_type, optional($.where_clause)), seq('sealed', '{', items($.variant, $), '}', optional($.where_clause)), seq('resource', optional($.go_type)), seq($.go_type, optional($.record_type), optional($.where_clause)), $.type), optional($.derive_clause)),
    go_type: $ => seq('go', $.string),
    derive_clause: $ => prec.dynamic(10, seq('derive', '(', comma($.qualified_name), ')')),
    record_type: $ => seq('{', items($.field_declaration, $), '}'),
    field_declaration: $ => seq(optional('lazy'), field('name', $._identifier), ':', $.type, optional(seq('=', $._expression)), optional($.go_tags)),
    go_tags: $ => seq('go', '{', items(seq($._identifier, ':', $.string), $), '}'),
    variant: $ => seq(field('name', $._identifier), optional($.record_type), optional($.where_clause)),
    type_parameters: $ => seq('[', comma(seq($._identifier, optional(seq(':', $.qualified_name, repeat(seq('+', $.qualified_name)))))), ']'),
    function_declaration: $ => seq('fn', optional($.receiver), field('name', $._identifier), choice(seq('=', $.qualified_name), seq(optional($.type_parameters), $.parameters, optional($.where_clause), optional($.uses_clause), optional($.needs_clause), optional(seq(':', $.type)), choice($.block, $.go_body)))),
    receiver: $ => seq('(', field('name', $._identifier), ':', $.type, ')'),
    parameters: $ => seq('(', optional(comma($.parameter)), ')'),
    parameter: $ => seq(field('name', $._identifier), ':', $.type, optional(seq('in', $._identifier)), optional(seq('=', $._expression))),
    uses_clause: $ => prec.right(seq('uses', $._identifier, repeat(seq('+', $._identifier)))),
    needs_clause: $ => seq('needs', $.qualified_name, optional('?'), repeat(seq('+', $.qualified_name, optional('?')))),
    where_clause: $ => prec.right(seq('where', $.requirement, repeat(seq(choice('and', 'or'), $.requirement)))),
    requirement: $ => choice($.qualified_name, $.number, $.string, $.rune, $.boolean, $.list_literal,
      seq('(', $.requirement, ')'),
      prec.left(14, seq($.requirement, optional($.type_arguments), '(', optional(comma($._expression)), ')')),
      prec.left(15, seq($.requirement, '.', $._identifier)),
      prec(11, seq(choice('-', '!', '^'), $.requirement)),
      ...[['or',1], ['and',2], ['||',3], ['&&',4], ['==',5], ['!=',5], ['<',5], ['<=',5], ['>',5], ['>=',5], ['+',6], ['-',6], ['|',6], ['^',6], ['&',7], ['<<',7], ['>>',7], ['*',7], ['/',7], ['%',7]].map(([op,p]) => prec.left(p, seq($.requirement, op, $.requirement)))),
    type: $ => prec.dynamic(1, seq(choice($.qualified_name, seq('(', $.type, ')'), $.tuple_type, $.function_type), optional($.type_arguments), optional($.uses_clause), optional($.where_clause), repeat(seq('|', $.type)))),
    type_arguments: $ => seq('[', comma($.type), ']'),
    tuple_type: $ => tuple($.type),
    function_type: $ => prec(1, seq('(', optional(comma($.type)), ')', optional($.uses_clause), '=>', $.type)),
    predicate_declaration: $ => seq('pred', field('name', $._identifier), optional($.type_parameters), $.parameters, optional($.uses_clause), optional($.needs_clause), choice($.block, $.go_body)),
    rule_declaration: $ => seq('rule', field('name', $._identifier), $.parameters, '{', $.requirement, '=>', $.requirement, '}'),
    test_declaration: $ => prec.dynamic(10, seq('test', $.string, optional($.parameters), $.block)),
    class_declaration: $ => prec.dynamic(10, seq('class', field('name', $._identifier), $.type_parameters, '{', repeat($.method_signature), '}')),
    method_signature: $ => seq('fn', field('name', $._identifier), optional($.type_parameters), $.parameters, optional($.where_clause), optional($.uses_clause), optional($.needs_clause), optional(seq(':', $.type))),
    instance_declaration: $ => prec.dynamic(10, seq('instance', field('name', $._identifier), optional($.type_parameters), ':', $.type, '{', repeat($.function_declaration), '}')),
    instances_declaration: $ => prec.dynamic(10, seq('instances', $._identifier, '{', items(seq($.qualified_name, optional(seq('.', '*'))), $), '}')),
    providers_declaration: $ => prec.dynamic(10, seq('providers', $._identifier, '=', '{', items(seq($._identifier, ':', $.qualified_name), $), '}')),
    ambient_declaration: $ => prec.dynamic(10, seq(repeat(choice('logged', seq('propagated', '(', $.string, ')'))), 'ambient', $._identifier, ':', $.type)),
    _statement: $ => choice($.bare_return, $.bare_break, $.bare_continue, $.binding, $.trust_statement, $._expression),
    binding: $ => seq(optional(choice('lazy', seq('async', '(', $._expression, ')'))), field('name', choice($._identifier, alias('lazy', $.identifier), '_', $.tuple_pattern)), optional(seq(':', $.type)), '=', $._expression),
    trust_statement: $ => seq('trust', $._expression),
    block: $ => seq('{', items($._statement, $), '}'),
    _expression: $ => choice($.generic_expression, $.qualified_name, $.number, $.string, $.rune, $.boolean, $.interpolated_string, $.block, $.record_expression, $.list_literal, $.map_literal, $.parenthesized_expression, $.tuple_literal, $.call_expression, $.selector_expression, $.try_expression, $.unary_expression, $.binary_expression, $.is_expression, $.lambda_expression, $.if_expression, $.match_expression, $.return_expression, $.scope_expression, $.with_expression, $.generate_expression, $.yield_expression, $.for_expression, $.comptime_expression, $.mock_expression, 'break', 'continue', $.go_body),
    number: _ => token(choice(/0[xX][\da-fA-F_]+/, /0[bB][01_]+/, /0[oO][0-7_]+/, /\d[\d_]*(\.\d[\d_]*)?([eE][+-]?[\d_]+)?/)),
    string: $ => seq('"', repeat(choice($.escape_sequence, token.immediate(prec(1, /[^"\\]+/)))), token.immediate('"')),
    escape_sequence: _ => token.immediate(seq('\\', /./)),
    rune: _ => token(seq("'", choice(/[^'\\]/, /\\([^xuU]|x[\da-fA-F]{2}|u[\da-fA-F]{4}|U[\da-fA-F]{8})/), "'")),
    boolean: _ => choice('true', 'false'),
    interpolated_string: $ => prec(2, seq(field('prefix', $.qualified_name), token.immediate('"'), repeat(choice($.escape_sequence, token.immediate(prec(1, /[^"\\$]+/)), token.immediate('$$'), $.interpolation)), token.immediate('"'))),
    interpolation: $ => choice(seq(token.immediate('${'), $._expression, '}'), seq(token.immediate('$'), alias(token.immediate(/[\p{L}][\p{L}\p{N}_]*/u), $.identifier))),
    tuple_literal: $ => tuple($._expression),
    tuple_pattern: $ => tuple($.pattern),
    parenthesized_pattern: $ => seq('(', $.pattern, ')'),
    tuple_index: _ => /[0-9]+/,
    parenthesized_expression: $ => seq('(', $._expression, ')'),
    generic_expression: $ => prec.left(14, seq($._expression, $.type_arguments)),
    call_expression: $ => prec.left(14, seq(field('function', $._expression), optional($.type_arguments), '(', optional(comma($.argument)), ')')),
    argument: $ => seq(optional(seq(choice($._expression, alias('scope', $.identifier)), ':')), $._expression),
    selector_expression: $ => prec.left(15, seq(optional($._expression), '.', field('field', choice($._identifier, $.tuple_index)), optional($.type_arguments))),
    try_expression: $ => prec.left(13, seq($._expression, '?')),
    record_expression: $ => prec.dynamic(1, seq(choice($._expression, '.'), optional($.type_arguments), $.record_literal)),
    record_literal: $ => seq('{', items(seq(field('name', $._identifier), ':', $._expression), $), '}'),
    list_literal: $ => seq('[', items($._expression, $), ']'),
    map_literal: $ => seq('{', choice(':', repeat1(seq($._expression, ':', $._expression, optional(',')))), '}'),
    unary_expression: $ => prec(11, seq(choice('-', '!', '^'), $._expression)),
    binary_expression: $ => choice(...[['|>',1], ['||',2], ['&&',3], ['==',4], ['!=',4], ['<',4], ['<=',4], ['>',4], ['>=',4], ['+',5], ['-',5], ['|',5], ['^',5], ['&',6], ['<<',6], ['>>',6], ['*',6], ['/',6], ['%',6]].map(([op,p]) => prec.left(p, seq(field('left',$._expression), field('operator',op), field('right',$._expression))))),
    is_expression: $ => prec.left(4, seq(field("value", $._expression), "is", field("pattern", $.test_pattern))),
    lambda_expression: $ => prec.right(1, seq(choice(field('parameter', $._identifier), seq('(', optional(comma($.lambda_parameter)), ')')), '=>', $._expression)),
    lambda_parameter: $ => seq($._identifier, optional(seq(':', $.type))),
    if_expression: $ => seq('if', '(', $._expression, ')', $.block, optional(seq('else', choice($.if_expression, $.block)))),
    match_expression: $ => seq('match', '(', $._expression, ')', '{', items($.match_arm, $), '}'),
    match_arm: $ => seq($.pattern, '=>', $._expression),
    pattern: $ => choice($.tuple_pattern, $.parenthesized_pattern, '_', $.number, seq('-', $.number), $.string, $.rune, $.boolean, seq(field('name', choice($._identifier, '_')), ':', alias($._pattern_type, $.type)), seq(choice($.qualified_name, $.context_pattern), optional(seq('{', items($.field_pattern, $), '}'))), seq('[', items(choice($.pattern, seq('...', optional(field('name', $._identifier)))), $), ']')),
    _pattern_type: $ => prec.dynamic(1, seq(choice($.qualified_name, seq('(', $.type, ')'), $.tuple_type, alias($._pattern_function_type, $.function_type)), optional($.type_arguments), optional($.uses_clause), optional($.where_clause), repeat(seq('|', alias($._pattern_type, $.type))))),
    _pattern_function_type: $ => seq('(', optional(comma($.type)), ')', optional($.uses_clause), '=>', alias($._pattern_type, $.type)),
    test_pattern: $ => prec.dynamic(2, prec.right(2, choice($.test_tuple_pattern, $.test_parenthesized_pattern, '_', $.number, seq('-', $.number), $.string, $.rune, $.boolean, seq(field('name', choice($._identifier, '_')), ':', $.type), seq(choice($.type, $.context_pattern), optional(seq('{', items($.test_field_pattern, $), '}'))), seq('[', items(choice($.test_pattern, seq('...', optional(field('name', $._identifier)))), $), ']')))),
    test_tuple_pattern: $ => prec.right(seq(tuple($.test_pattern), optional($.uses_clause), optional(seq('=>', $.type)), optional($.where_clause), repeat(seq('|', $.type)))),
    test_parenthesized_pattern: $ => prec.right(seq('(', $.test_pattern, ')', optional($.uses_clause), optional(seq('=>', $.type)), optional($.where_clause), repeat(seq('|', $.type)))),
    test_field_pattern: $ => seq(field('name', $._identifier), optional(seq(':', field('pattern', $.test_pattern)))),
    context_pattern: $ => seq('.', field('name', $._identifier)),
    field_pattern: $ => seq(field('name', $._identifier), optional(seq(':', field('pattern', $.pattern)))),
    return_expression: $ => prec.right(seq('return', optional($._expression))),
    scope_expression: $ => prec.dynamic(10, seq('scope', field('name', $._identifier), optional(seq('with', comma($._expression))), $.block)),
    with_expression: $ => prec.dynamic(10, seq('with', '(', items(seq($.qualified_name, ':', $._expression), $), ')', $.block)),
    generate_expression: $ => seq('generate', $.type_arguments, $.block),
    yield_expression: $ => prec.right(seq('yield', $._expression)),
    for_expression: $ => seq('for', '(', field('name', choice($._identifier, '_')), 'in', $._expression, ')', $.block),
    comptime_expression: $ => prec.dynamic(10, seq('comptime', $.block)),
    mock_expression: $ => prec.dynamic(10, seq('mock', $.qualified_name, $.mock_parameters, $.block)),
    mock_parameters: $ => seq('(', optional(comma(seq(field('name', choice($._identifier, '_'))))), ')'),
    go_body: $ => seq('unsafe', 'go', choice($.string, seq('{', optional($.go_content), '}'))),
  },
});
